# embers

./: .env.example  .gcloudignore  .gitignore  DEPLOYMENT_GUIDE.md  index.html  package-lock.json  package.json  speech-recognition-strategy.md  vite.config.ts
.agent/workflows/: apply-terraform.md  build.md  deploy.md  lets-apply-terraform.md  lets-build.md  lets-deploy.md  lets-release-pipeline.md  milestone.md  release-pipeline.md
.firebase/: hosting.ZGlzdA.cache
analysis/: final_analyses.md
analysis/05a-results/: analysis_report.md
analysis/checkpoint_3/: analyze.py  report.md
infrastructure/: DEPLOYMENT.md  DEPLOYMENT_GCE.md  README.md  cloudbuild-base.yaml  cloudbuild.yaml  deploy.sh  service.yaml
infrastructure/gce/: README.md  cloudbuild-gce.yaml
infrastructure/gce/scripts/: deploy.sh  startup.sh
infrastructure/terraform/: cloud_run.tf  deploy.tfplan  frontend.tf  iam.tf  main.tf  outputs.tf  secrets.tf  storage.tf  terraform.tfstate.1771801198.backup  terraform.tfvars  terraform.tfvars.example  variables.tf
planning/: tracking_work_history.md  tracking_work_history_part2.md
planning/post-deployment/: improvement-backlog.md
server/: Dockerfile  Dockerfile.base  lets.yaml  pyproject.toml  requirements-heavy.txt
server/app/: auth.py  config.py  dependencies.py  exceptions.py  logging_config.py  main.py  middleware.py  schemas.py
server/app/cache/: shape_cache.py
server/app/models/: grounded_sam.py  hunyuan3d.py  partcrafter.py  protocol.py  registry.py  sdxl_turbo.py
server/app/pipeline/: mask_to_faces.py  mesh_renderer.py  point_sampler.py  prompt_templates.py  template_matcher.py
server/app/routes/: cache.py  debug.py  generate.py  health.py  prometheus.py
server/app/services/: metrics.py  pipeline.py
server/scripts/: build_and_deploy.sh
server/tests/: conftest.py  test_auth.py  test_fallback_trigger.py  test_fallback_validation.py  test_health_endpoints.py  test_http_mocking.py  test_hunyuan3d.py  test_integration.py  test_mask_to_faces.py  test_partcrafter.py  test_pipeline.py  test_point_sampler.py  test_prompt_templates.py  test_properties.py  test_schema_factories.py  test_sdxl_turbo.py  test_shape_cache.py  test_snapshots.py  test_template_matcher.py
src/: App.tsx  index.css
src/__tests__/: GhostTitle.test.tsx  GhostTranscript.test.ts  KeywordClassifier.test.ts  MorphTargets.geometry.test.ts  MorphTargets.test.ts  MotionPlanManager.test.ts  STTManager.test.ts  SemanticBackend.anticipation.test.ts  SemanticBackend.complexMode.test.ts  SemanticBackend.isProcessing.test.ts  SemanticBackend.test.ts  SemanticBackend.transition.test.ts  ServerClient.test.ts  ServerShapeAdapter.edge.test.ts  ServerShapeAdapter.scale.test.ts  ServerShapeAdapter.test.ts  SessionLogger.test.ts  SpeechEngine.test.ts  SplitPhase.test.ts  Tier1Orchestrator.test.ts  TuningConfig.test.ts  TuningPanel.test.tsx  UIOverlay.test.tsx  UniformBridge.emotion.test.ts  UniformBridge.overrides.test.ts  UniformBridge.test.ts  WorkspaceEngine.test.ts  keywords.test.ts
src/audio/: SERManager.ts  WebSocketSTTClient.ts  audio-worklet.ts  ser-worker.ts  stt-manager.ts  types.ts
src/components/: AnalysisPanel.tsx  Canvas.tsx  GhostTitle.tsx  ReportPage.css  ReportPage.tsx  TuningPanel.tsx  UIOverlay.tsx
src/data/: keywords.ts  sentiment.ts
src/engine/: MorphTargets.ts  ParticleSystem.ts  ServerShapeAdapter.ts  UniformBridge.ts  WorkspaceEngine.ts  particle-system-extensions.ts
src/hooks/: useSingletons.ts  useThreeScene.ts
src/services/: AudioEngine.ts  KeywordClassifier.ts  SemanticBackend.ts  ServerClient.ts  SessionLogger.ts  SpeechEngine.ts  TuningConfig.ts
src/shaders/: motion-plan.glsl  position.frag.glsl  render.frag.glsl  render.vert.glsl  velocity.frag.glsl
src/templates/: template-library.ts
src/templates/templates/: action_jump.json  action_spin.json  action_wave.json  ambient_idle.json  locomotion_quadruped.json  transform_explode.json
